Adapter selon les besoins speficie par le client
